--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
@@ -29,6 +30,13 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+
+.jumbotron {
+  background-image:url('https://p3cdn4static.sharpschool.com/UserFiles/Servers/Server_747631/Image/images/logos/Butte_COE_Logo.gif');
+  height: 500px;
+}
+
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
