--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@ p {
 
 .jumbotron {
   background-image:url('https://p3cdn4static.sharpschool.com/UserFiles/Servers/Server_747631/Image/images/logos/Butte_COE_Logo.gif');
-  height: 200px;
+  width: 722px;
+  height: 282px;
 }
 
 .jumbotron h1 {
