--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ p {
 }
 
 .jumbotron {
-  background-image:url('https://p3cdn4static.sharpschool.com/UserFiles/Servers/Server_747631/Image/images/logos/Butte_COE_Logo.gif');
+  background-image:url('https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xft1/v/t1.0-9/11205521_1407139952943336_2389948462281605494_n.jpg?oh=b20b8b9fabb1e3bf9364be1c62c54142&oe=56EDC5EC');
   width: 722px;
   height: 282px;
 }
