--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ p {
 }
 
 .jumbotron {
-  background-image:url('https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xft1/v/t1.0-9/11205521_1407139952943336_2389948462281605494_n.jpg?oh=b20b8b9fabb1e3bf9364be1c62c54142&oe=56EDC5EC');
+  background-image:url('https://fbcdn-photos-f-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-0/s200x200/11205521_1407139952943336_2389948462281605494_n.jpg?oh=8c47372f0bcd12a410a622374ccaece1&oe=56C7B2CB&__gda__=1455304179_c4d25bcd3cd675502e7072ed55330ea8');
   width: 722px;
   height: 282px;
 }
