--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,11 @@ p {
     font-size: 20px;
 }
 
+.push-spaces
+{
+    height: 100px;
+}
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
