--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ p {
 }
 
 .jumbotron h1 {
-    color: #9933CC;
+    color: #fff;
     font-size: 48px;
     font-weight: bold;
     font-family: Shift, sans-serif;
