--- a/css/main.css
+++ b/css/main.css
@@ -49,9 +49,14 @@ p {
     font-size: 20px;
 }
 
-.more
-{
+more{
     background-color: #f7f7f7;
+}
+
+.more h3{
+  font-family: Shift, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 
