--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,7 @@
 // Variables
 
-@brand-primary: #2C3E50;
-@brand-success: #18BC9C;
-@gray-lighter: lighten(#000, 93.5%);
+@brand-primary: #0085A1;
+@gray-dark: lighten(black, 25%);
+@gray: lighten(black, 50%);
+@white-faded: fade(white, 80%);
+@gray-light: #eee;
